--- a/scss/lesson5.css
+++ b/scss/lesson5.css
@@ -8,7 +8,7 @@
 .container {
   background: white;
   width: 100%;
-  font-family: Rubik, serif;
+  font-family: "Rubik", serif;
 }
 
 .content {
@@ -96,8 +96,8 @@ header div:before {
 /*Main*/
 .position {
   max-width: 1140px;
-  display: flex;
   height: 200px;
+  display: flex;
   align-items: center;
   justify-content: space-evenly;
   margin: 157px auto;
@@ -126,12 +126,12 @@ header div:before {
 /*Laptop*/
 .feature {
   display: flex;
+  align-items: center;
+  justify-content: center;
   flex-direction: row;
   max-width: 1440px;
   width: 100%;
   gap: 100px;
-  align-items: center;
-  justify-content: center;
   padding-bottom: 71px;
 }
 .feature div div h2 {
@@ -212,7 +212,7 @@ header div:before {
 }
 .product .grid-data {
   display: grid;
-  place-content: center;
+  place-items: center;
   grid-template-columns: 1fr 1fr 1fr;
   margin: 80px 130px 0 130px;
   justify-items: center;
@@ -334,6 +334,7 @@ header div:before {
 
 .relation {
   position: relative;
+  margin-bottom: 200px;
 }
 .relation .absolution {
   background: white;
@@ -388,34 +389,51 @@ header div:before {
 }
 
 /*Footer*/
-.footer-li {
-  display: grid;
-  grid-template-columns: 2fr 0.5fr 0.5fr 0.5fr;
-  gap: 20px;
-  padding-left: 85px;
+footer {
+  background-color: #f8f9fa;
   padding-top: 200px;
-  margin-top: 200px;
-  background: #F8F8F8;
 }
-.footer-li .grid-item h3 {
+footer .footer-wrapper {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+footer .footer-wrapper .footer-li {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.footer-li .grid-item,
+.footer-li .flexible {
+  flex: 1;
+  min-width: 200px;
+  padding: 10px;
+}
+
+.footer-li .flexible {
+  flex: 2;
+  text-align: left;
+}
+
+.grid-item h3 {
   font-size: 18px;
   margin-bottom: 10px;
   text-align: left;
   color: #0B132A;
 }
-.footer-li .grid-item ul {
+.grid-item ul {
   list-style-type: none;
   padding: 0;
 }
-.footer-li .grid-item ul li {
+.grid-item ul li {
   margin: 15px 0;
 }
-.footer-li .grid-item ul li a {
+.grid-item ul li a {
   text-decoration: none;
   color: #4F5665;
   font-size: 16px;
 }
-.footer-li .grid-item ul li a:hover {
+.grid-item ul li a:hover {
   color: #555;
 }
 
