--- a/scss/lesson5.scss
+++ b/scss/lesson5.scss
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+@import "mixin";
+@import "vars";
 
 * {
   box-sizing: border-box;
@@ -7,13 +9,13 @@
 }
 
 .container {
-  background: white;
+  background: $bg-color;
   width: 100%;
-  font-family: Rubik, serif;
+  font-family: $font-family;
 }
 
 .content {
-  max-width: 1440px;
+  max-width: $max-width;
   margin: 0 auto;
   width: 100%;
 }
@@ -24,7 +26,7 @@ header {
 
   div:before {
     content: 'x';
-    color: #F5FAFE;
+    color: $light-color;
     position: absolute;
     right: 30px;
     cursor: pointer;
@@ -37,14 +39,13 @@ header {
 .notification {
   text-align: center;
   background: #000;
-  color: white;
+  color: $bg-color;
   height: 60px;
   place-content: center;
 }
 
 .communication {
-  display: flex;
-  justify-content: center;
+  @include display(center);
   margin-top: 87px;
 
   div {
@@ -57,7 +58,7 @@ header {
       h1 {
         line-height: 70px;
         font-size: 50px;
-        color: #8CC5F9;
+        color: $primary-color;
         font-weight: 700;
       }
 
@@ -68,8 +69,8 @@ header {
         font-weight: 700;
         border: none;
         margin-top: 87px;
-        background: #8CC5F9;
-        color: white;
+        background: $primary-color;
+        color: $bg-color;
       }
     }
 
@@ -82,8 +83,7 @@ header {
 
 .navbar ul {
   padding: 0;
-  display: grid;
-  place-items: center;
+  @include grid-center;
   grid-auto-flow: column;
   gap: 43px;
 }
@@ -99,33 +99,27 @@ header {
 }
 
 .navbar-container {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
+  @include display-center(space-around);
   margin-top: 21px;
 }
 
 /*Main*/
 .position {
   max-width: 1140px;
-  display: flex;
   height: 200px;
-  align-items: center;
-  justify-content: space-evenly;
+  @include display-center(space-evenly);
   margin: 157px auto;
   border-radius: 5px;
-  box-shadow: 0 0 30px #f5e7e7;
+  @include box-shadow(#f5e7e7, 30px)
 }
 
 .position > div {
-  display: flex;
-  flex-direction: row;
+  @include flex-direction(row);
   align-items: center;
 }
 
 .position > div > div {
-  display: flex;
-  flex-direction: column;
+  @include flex-direction(column);
   align-items: center;
 }
 
@@ -137,13 +131,11 @@ header {
 
 /*Laptop*/
 .feature {
-  display: flex;
+  @include display-center(center);
   flex-direction: row;
-  max-width: 1440px;
+  max-width: $max-width;
   width: 100%;
   gap: 100px;
-  align-items: center;
-  justify-content: center;
   padding-bottom: 71px;
 
   div {
@@ -151,7 +143,7 @@ header {
       h2 {
         font-size: 35px;
         line-height: 50px;
-        color: #8CC5F9;
+        color: $primary-color;
       }
 
       span {
@@ -174,7 +166,7 @@ header {
 
   span {
     font-size: 14px;
-    color: #8CC5F9;
+    color: $primary-color;
   }
 }
 
@@ -187,7 +179,7 @@ header {
 .product {
   max-width: 100%;
   margin: 0 auto;
-  width: 1440px;
+  width: $max-width;
 
   .best-product {
     display: flex;
@@ -201,14 +193,14 @@ header {
 
       p {
         font-weight: 400;
-        color: #4F5665;
+        color: $text-color;
         margin-top: 21px;
       }
 
       h2 {
         font-size: 35px;
         font-weight: 500;
-        color: #0B132A;
+        color: $secondary-color;
         line-height: 50px;
       }
 
@@ -241,8 +233,7 @@ header {
   }
 
   .grid-data {
-    display: grid;
-    place-content: center;
+    @include grid-center;
     grid-template-columns: 1fr 1fr 1fr;
     margin: 80px 130px 0 130px;
     justify-items: center;
@@ -264,10 +255,10 @@ header {
         width: 148.74px;
         height: 39.76px;
         border-radius: 47px;
-        background: white;
-        color: #8CC5F9;
+        background: $bg-color;
+        color: $primary-color;
         margin-top: 50px;
-        border: solid #8CC5F9 1px;
+        border: solid $primary-color 1px;
       }
 
       div:nth-of-type(2) span {
@@ -291,7 +282,7 @@ header {
 .scroll {
   display: flex;
   justify-content: center;
-  max-width: 1440px;
+  max-width: $max-width;
   width: 100%;
 
   img {
@@ -313,14 +304,14 @@ header {
 
   h3 {
     font-size: 35px;
-    color: #0B132A;
+    color: $secondary-color;
     line-height: 50px;
     text-align: center;
     margin-bottom: 24px;
   }
 
   span {
-    color: #4F5665;
+    color: $text-color;
     line-height: 30px;
   }
 }
@@ -333,7 +324,7 @@ header {
 .grid-four {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  max-width: 1440px;
+  max-width: $max-width;
   width: 100%;
   grid-column-gap: 50px;
   overflow-x: scroll;
@@ -342,7 +333,7 @@ header {
 
   .grid-item {
     border-radius: 3%;
-    border: 1px solid #8CC5F9;
+    border: 1px solid $primary-color;
     max-width: 100%;
     width: 400px;
     height: 230px;
@@ -375,13 +366,14 @@ header {
       font-weight: 400;
       line-height: 30px;
       text-align: left;
-      color: #0B132A;
+      color: $secondary-color;
     }
   }
 }
 
 .relation {
   position: relative;
+  margin-bottom: 200px;
 
   .absolution {
     background: #FFFF;
@@ -396,10 +388,10 @@ header {
     margin-top: 30px;
     align-items: center;
     justify-content: space-evenly;
-    box-shadow: 0 0 7px #a38b8b;
+    @include box-shadow(#a38b8b, 7px);
 
     div:nth-of-type(2) span {
-      color: #0B132A;
+      color: $secondary-color;
       font-size: 35px;
       font-weight: 500;
       line-height: 45px;
@@ -410,11 +402,11 @@ header {
       font-weight: 400;
       line-height: 30px;
       text-align: left;
-      color: #4F5665;
+      color: $text-color;
     }
 
     div:nth-of-type(3) {
-      color: #8CC5F9;
+      color: $primary-color;
     }
 
     div:nth-of-type(3) button {
@@ -422,8 +414,8 @@ header {
       height: 60px;
       border-radius: 10px;
       border: none;
-      color: white;
-      background: #8CC5F9;
+      color: $bg-color;
+      background: $primary-color;
       font-weight: 700;
     }
 
@@ -432,7 +424,7 @@ header {
 
 /**/
 .flexible > p {
-  color: #AFB5C0;
+  color: $light-text;
   font-size: 18px;
   font-weight: 400;
   line-height: 30px;
@@ -442,38 +434,58 @@ header {
 }
 
 /*Footer*/
-.footer-li {
-  display: grid;
-  grid-template-columns: 2fr 0.5fr 0.5fr 0.5fr;
-  gap: 20px;
-  padding-left: 85px;
+footer {
+  background-color: #f8f9fa;
   padding-top: 200px;
-  margin-top: 200px;
-  background: #F8F8F8;
 
-  .grid-item h3 {
+  .footer-wrapper {
+    max-width: 1200px;
+    margin: 0 auto;
+
+    .footer-li {
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+    }
+  }
+}
+
+.footer-li .grid-item,
+.footer-li .flexible {
+  flex: 1;
+  min-width: 200px;
+  padding: 10px;
+}
+
+.footer-li .flexible {
+  flex: 2;
+  text-align: left;
+}
+
+.grid-item {
+  h3 {
     font-size: 18px;
     margin-bottom: 10px;
     text-align: left;
-    color: #0B132A;
+    color: $secondary-color;
   }
 
-  .grid-item ul {
+  ul {
     list-style-type: none;
     padding: 0;
-  }
 
-  .grid-item ul li {
-    margin: 15px 0;
-  }
+    li {
+      margin: 15px 0;
 
-  .grid-item ul li a {
-    text-decoration: none;
-    color: #4F5665;
-    font-size: 16px;
-  }
+      a {
+        text-decoration: none;
+        color: $text-color;
+        font-size: 16px;
 
-  .grid-item ul li a:hover {
-    color: #555;
+        &:hover {
+          color: #555;
+        }
+      }
+    }
   }
 }
