--- a/scss/lesson5.scss
+++ b/scss/lesson5.scss
@@ -171,8 +171,7 @@ header {
 }
 
 .feature div:nth-of-type(2) div div {
-  display: flex;
-  flex-direction: row;
+  @include flex-direction(row);
 }
 
 /*Product*/
@@ -206,14 +205,12 @@ header {
 
       max-width: 800px;
       width: 100%;
-
     }
   }
 
   .map {
     margin-top: 156px;
-    display: flex;
-    justify-content: center;
+    @include display(center);
   }
 
   .better {
@@ -243,7 +240,7 @@ header {
       width: 100%;
       max-width: 365px;
       height: 355px;
-      box-shadow: 0 0 10px rgb(206, 176, 176);
+      @include box-shadow(rgb(206, 176, 176), 10px);
       border-radius: 24px;
       padding: 20px 27px 37px 36px;
 
@@ -280,8 +277,7 @@ header {
 }
 
 .scroll {
-  display: flex;
-  justify-content: center;
+  @include display(center);
   max-width: $max-width;
   width: 100%;
 
@@ -293,8 +289,7 @@ header {
 
 /*Social*/
 .social {
-  display: flex;
-  justify-content: space-evenly;
+  @include display(space-evenly);
   margin-top: 20px;
 }
 
@@ -340,8 +335,7 @@ header {
     padding: 36px 31px 25px 30px;
 
     div:first-child {
-      display: flex;
-      flex-direction: row;
+     @include flex-direction(row);
       gap: 21px;
     }
 
@@ -380,14 +374,12 @@ header {
     position: absolute;
     top: 115%;
     left: 10%;
-    display: flex;
     border-radius: 10px;
     max-width: 1140px;
     height: 233px;
     width: 100%;
     margin-top: 30px;
-    align-items: center;
-    justify-content: space-evenly;
+    @include display-center(space-evenly);
     @include box-shadow(#a38b8b, 7px);
 
     div:nth-of-type(2) span {
@@ -443,8 +435,7 @@ footer {
     margin: 0 auto;
 
     .footer-li {
-      display: flex;
-      justify-content: space-between;
+      @include display(space-between);
       flex-wrap: wrap;
     }
   }
